refactored test | not using @DirtiesContext | faster x10